fix settings not updating on empty tabs

--- a/src/popup.html
+++ b/src/popup.html
@@ -539,7 +539,7 @@
 				</div>
 			</div>
 
-			<div class="card mb-3">
+			<div class="card mb-3" id="whitelist-container">
 				<div class="row space-between">
 					<div>
 						<label for="whitelist" id="whitelist-label"><span id="website-name">bing.com</span>
