Added Urdu Language

--- a/src/popup.html
+++ b/src/popup.html
@@ -520,6 +520,9 @@
 					<option value="tr">
 						Türkçe
 					</option>
+					<option value="ur">
+						اردو
+					</option>
 				</select>
 			</div>
 			<h1>HaramBlur</h1>
